# editscope

./: .gitignore  README.md  make_report.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
cie_harness/: adversarial_probe.py
scope_oracle/: FREEZE.md  __init__.py  audit.py  callgraph.py  grounding.py  intra_unit.py  metric_card.py  mutate.py  parity_real.py  partitioner.py  policy.py  resolver.py  run_real.py  schema.py
scope_oracle/tests/: test_audit_freeze.py  test_intra_unit_hardening.py
track_a/: fetch_canitedit.py
